helm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: bankapp
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: bankapp
spec:
  selector:
    app: ollama
  ports:
    - port: 11434
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp
spec:
  type: ClusterIP
  selector:
    app: bankapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-management
  namespace: bankapp
  labels:
    app: bankapp
spec:
  type: ClusterIP
  selector:
    app: bankapp
  ports:
    - name: management
      port: 8081
      targetPort: management
